--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,9 @@ repositories {
 }
  
 dependencies {
-    compile 'org.iot-dsa:dslink:0.4.0'
+    compile ('org.iot-dsa:dslink:0.5.0-SNAPSHOT') {
+        exclude group: 'ch.qos.logback'
+    }
     compile project(':esp3')
 }
 
