--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,7 @@ repositories {
 }
  
 dependencies {
-    compile ('org.iot-dsa:dslink:0.7.0') {
-        exclude group: 'ch.qos.logback'
-    }
+    compile 'org.iot-dsa:dslink:0.8.0'
     compile project(':esp3')
 }
 
