Add the snapshots repository to esp3

--- a/esp3/build.gradle
+++ b/esp3/build.gradle
@@ -13,6 +13,9 @@ jar {
 
 repositories {
     mavenCentral()
+    maven {
+        url 'https://oss.sonatype.org/content/repositories/snapshots/'
+    }Ad
 }
 
 dependencies {
