--- a/esp3/src/main/resources/i18n.properties
+++ b/esp3/src/main/resources/i18n.properties
@@ -373,6 +373,14 @@ enocean.profile.A5_10_1D.TMP=Temperature
 enocean.profile.A5_10_1D.FAN=Fan speed
 enocean.profile.A5_10_1D.OED=Occupancy enable/disable
 enocean.profile.A5_10_1D.OB=Occupancy button
+enocean.profile.A5_10_1E=A5_10_1e Supply Voltage Monitor, Illumination, Temperature Sensor, Fan Speed and Occupancy Control
+enocean.profile.A5_10_1E.DBM=Signal strength
+enocean.profile.A5_10_1E.SV=Supply Voltage
+enocean.profile.A5_10_1E.ILL=Illumination
+enocean.profile.A5_10_1E.TMP=Temperature
+enocean.profile.A5_10_1E.FAN=Fan speed
+enocean.profile.A5_10_1E.OED=Occupancy enable/disable
+enocean.profile.A5_10_1E.OB=Occupancy button
 enocean.profile.A5_10_1F=A5_10_1f Temperature Sensor, Set Point, Fan Speed, Occupancy and Unoccupancy Control
 enocean.profile.A5_10_1F.DBM=Signal strength
 enocean.profile.A5_10_1F.FAN=Turn-switch for fan speed
